tests/compile-fail/get-set-on-private-field.stderr
error[E0624]: method `field` is private
  --> tests/compile-fail/get-set-on-private-field.rs:27:11
   |
7  |         field: u32,
   |         ---------- private method defined here
...
27 |     input.field(&db);
   |           ^^^^^ private method

error[E0624]: method `set_field` is private
  --> tests/compile-fail/get-set-on-private-field.rs:28:11
   |
7  |         field: u32,
   |         ----- private method defined here
...
28 |     input.set_field(&mut db).to(23);
   |           ^^^^^^^^^ private method
